--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "keyword-linker",
-  "version": "1.0.0",
-  "description": "Add hyperlinks for keywords",
+  "version": "1.1.0",
+  "description": "Add hyperlinks from keywords",
   "main": "keyword-linker.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -20,5 +20,8 @@
   "bugs": {
     "url": "https://github.com/wuliupo/keyword-linker/issues"
   },
-  "homepage": "https://github.com/wuliupo/keyword-linker#readme"
+  "homepage": "https://github.com/wuliupo/keyword-linker#readme",
+  "peerDependencies": {
+    "jsdom": "^13.1.0"
+  }
 }
