--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "keyword-linker",
   "version": "1.1.0",
-  "description": "Add hyperlinks from keywords",
+  "description": "Generate links for documentation from keywords.",
   "main": "keyword-linker.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,9 +11,8 @@
     "url": "git+https://github.com/wuliupo/keyword-linker.git"
   },
   "keywords": [
-    "keyword",
-    "hyperlink",
-    "replacement"
+    "link builder",
+    "keyword hyperlink"
   ],
   "author": "Liupo WU",
   "license": "MIT",
