--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "keyword-linker",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "Generate links for documentation from keywords.",
-  "main": "keyword-linker.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
